@@ -60,6 +60,7 @@ interface
 - method SCIPprintError() does not need the file stream anymore. The error is written via the error message callback.
 - since the error messages are not handled via the messages handler anymore, the parameter list of SCIPmessagehdlrCreate()
   changes; see pub_message.h and type_message.h.
+- new NLPI callback SCIP_DECL_NLPISETMESSAGEHDLR() to set message handler in NLP solver interfaces
 - removed SCIPparamSetBool(), please use SCIPchgBoolParam()
 - removed SCIPparamSetInt(), please use SCIPchgIntParam()
 - removed SCIPparamSetLongint(), please use SCIPchgLongintParam()
